--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 		<link id="icon" rel="icon" type="image/x-icon" href="data:image/x-icon;base64," />
 	</head>
 	<body>
+		<a id="download" style="display: none">Download</a>
+		<script type="text/javascript" src="./zip.min.js"></script>
 		<script type="text/javascript">
 			(function(){
 				const DEFAULT_COLOUR = "#1a1a1a";
+				const link = document.getElementById("download");
 
 				function getColourCode() {
 					const hash = location.hash;
@@ -22,6 +25,72 @@
 					document.title = colour;
 				}
 
+				async function getTemplateBlob() {
+					const filename = "/template.zip";
+					
+					return new Promise((resolve, reject) => {
+						const request = new XMLHttpRequest();
+
+						request.addEventListener('load', (response) => {
+							resolve(request.response);
+						});
+
+						request.addEventListener('error', (event) => {
+							reject(event);
+						})
+
+						request.responseType = "blob";
+						request.open("GET", filename);
+						request.send();
+					});
+				}
+
+				async function saveAsPptx() {
+					const colour = getColourCode();
+					if (colour) {
+						const blob = await getTemplateBlob();
+						const reader = new zip.ZipReader(new zip.BlobReader(blob));
+						const entries = await reader.getEntries();
+
+						const blobWriter = new zip.BlobWriter("application/vnd.openxmlformats-officedocument.presentationml.presentation");
+						const writer = new zip.ZipWriter(blobWriter);
+
+						for (let i = 0; i < entries.length; i++) {
+							const entry = entries[i];
+							const text = await entry.getData(new zip.TextWriter());
+							const options = {
+								level: entry.compressionMethod,
+								externalFileAttribute: entry.externalFileAttribute,
+								internalFileAttribute: entry.internalFileAttribute,
+								dataDescriptorSignature: entry.signature,
+								version: entry.version,
+								versionMadeBy: entry.versionMadeBy
+							};
+							console.log(entry);
+							if (entry.filename === "ppt/slides/slide1.xml") {
+								const newText = text.replace(/val="123456"/, `val="${colour.slice(1)}"`);
+								await writer.add(entry.filename, new zip.TextReader(newText), options);
+							} else {
+								if (entry.directory) {
+									await writer.add(entry.filename, null, { ...options, directory: true });
+								} else {
+									await writer.add(entry.filename, new zip.TextReader(text), options);
+								}
+							}
+						}
+
+						await reader.close();
+						//await writer.close();
+
+						const data = blobWriter.getData();
+						console.log(data)
+						link.href = URL.createObjectURL(data);
+						link.click();
+						URL.revokeObjectURL(link.href);
+
+					}
+				}
+
 				function init() {
 					const colour = getColourCode();
 					if (colour) {
@@ -32,6 +101,12 @@
 				}
 
 				window.addEventListener('hashchange', init);
+				window.addEventListener('keydown', (event) => {
+					if (event.ctrlKey && event.key === 's') {
+						event.preventDefault();
+						saveAsPptx();
+					}
+				})
 				init();
 			})();
 		</script>
